--- a/01-Angular/galeria/src/app/app.component.html
+++ b/01-Angular/galeria/src/app/app.component.html
@@ -1,13 +1,9 @@
-<h1 class='rojo' > Titulo {{title}} </h1>
+<h1 [class]="clase" > Titulo {{title}} </h1>
 <!-- {{ Interpolacion }} -->
-<app-item-galeria
-nombreItem="Papas"
-textoBoton="Fritas"
->
-</app-item-galeria>
-
-<app-item-galeria
-nombreItem="Carne"
-textoBoton="Molida"
+<app-item-galeria *ngFor="let flor of arregloFLoresJs" 
+[nombreItem] = "flor.nombre"
+[textoBoton] = "flor.descripcion"
+(cambioChela) = "cambioChela($event)"
+(cambioCerveza) = "cambioCerveza($event)"
 >
 </app-item-galeria>
