--- a/01-Angular/galeria/src/app/item-galeria/item-galeria.component.html
+++ b/01-Angular/galeria/src/app/item-galeria/item-galeria.component.html
@@ -1,5 +1,5 @@
 <h1 class="rojo"> 
-Item Galeria - {{ title }}
+Tienda: {{ titulo }}
 </h1>
 <p>
     nombre: {{ nombreItem }}
@@ -16,7 +16,7 @@ Item Galeria - {{ title }}
 
 <!-- Directivas: *ngFor -->
 
-<p *ngFor="let nota of notas">
-    {{nota}}
+<div *ngFor="let nota of notas">
+    <button (click)="agregarCarrito(nota)" >Añadir: {{ nota }}</button>
 
-</p>
+</div>
