--- a/01-Angular/galeria/src/app/item-galeria/item-galeria.component.html
+++ b/01-Angular/galeria/src/app/item-galeria/item-galeria.component.html
@@ -1,4 +1,4 @@
-<h1 class="rojo"> 
+<h1 class="rojo">
 Tienda: {{ titulo }}
 </h1>
 <p>
@@ -17,6 +17,6 @@ Tienda: {{ titulo }}
 <!-- Directivas: *ngFor -->
 
 <div *ngFor="let nota of notas">
-    <button (click)="agregarCarrito(nota)" >Añadir: {{ nota }}</button>
+    <button (click)="agregarCarrito(nota, titulo)" >Añadir: {{ nota }}</button>
 
 </div>
