--- a/01-Angular/tienda/src/app/contenedor-superior/contenedor-superior.component.html
+++ b/01-Angular/tienda/src/app/contenedor-superior/contenedor-superior.component.html
@@ -1,12 +1,12 @@
-<div class="contenedor-superior">
-  <div class="row">
+<div class="contenedor-superior container-fluid">
+  <div class="row arriba">
     <div class="col-md-3">
       <div class="item-menu-diferente item-menu-diferente-izquierda">
         BON BON BON
       </div>
 
     </div>
-    <div class="col-md-6">
+    <div class="col-md-6 visible">
       <div class="item-menu-diferente">
         BUILD A BOX
       </div>
@@ -21,7 +21,7 @@
       </div>
 
     </div>
-    <div class="col-md-3">
+    <div class="col-md-3 visible">
 
       <app-item-menu
         *ngFor="let item of listaItemsDerecha"
