--- a/01-Angular/tienda/src/styles.css
+++ b/01-Angular/tienda/src/styles.css
@@ -7,24 +7,27 @@ body {
   width: 100%;
   margin: 0;
   padding: 0;
-  background-image: url("assets/imagenes/background-top.jpg");
+  background-image: url("assets/imagenes/bonbg.webp");
   background-repeat: repeat;
   background-color: #f2f2f2;
   top: 0;
   left: 0;
   display: block;
+  font-family: StencilGothic;
 }
 .item-menu {
-  color: #0c5460;
+  color: black;
   font-size: 1em;
   margin-bottom: 20px;
   margin-top: 20px;
   margin-left: 10px;
   float: left;
   text-transform: uppercase;
+  font-family: Futura-Bold;
 }
 .item-menu-diferente {
-  color: #0c5460;
+  color: black;
+  font-size: 23px;
   font-size: 1em;
   margin-bottom: 20px;
   margin-top: 20px;
@@ -42,18 +45,13 @@ body {
 }
 .contenedor-siguiente {
   background-color: #0cd1e8;
+  font-family: Futura-Bold;
 }
 .row-izquierda {
   background-image: url("assets/imagenes/background.webp");
 }
 .item-menu:hover {
   cursor: pointer;
-}
-.contenedor-producto {
-  margin: 10px;
-  padding: 2px;
-  margin-left: 20px;
-  max-width: 15em;
 }
 .producto-superior {
   background-color: #fbf1f0;
@@ -72,12 +70,13 @@ body {
   text-transform: uppercase;
   font-size: 1.5em;
   font-weight: bold;
+  overflow: hidden;
 }
 .imagen-producto {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 50%;
+  width: 90%;
 }
 .imagen-producto:hover {
   -webkit-transform:rotate(25deg);
@@ -94,6 +93,11 @@ body {
   cursor: pointer;
   background-color: transparent;
   text-transform: uppercase;
+  transition: color .3s;
+  transition-property: color;
+  transition-duration: 0.3s;
+  transition-timing-function: ease;
+  transition-delay: 0s;
 }
 .btn-agregar:before {
   content: url("assets/iconos/ios-add-circle-outline.svg");
@@ -103,15 +107,20 @@ body {
   margin-top: -2px;
 }
 .btn-agregar:hover {
-  color: #7e57ff;
-  fill: #7e57ff;
+  color: #E9B3B3;
+  fill: #E9B3B3;
 }
 .ver-detalles {
   margin-top: 1em;
   padding-top: 1em;
+  transition: color .3s;
+  transition-property: color;
+  transition-duration: 0.3s;
+  transition-timing-function: ease;
+  transition-delay: 0s;
 }
 .ver-detalles:hover {
-  color: coral;
+  color: #E9B3B3;
   cursor: pointer;
 }
 .producto-numero {
@@ -125,16 +134,18 @@ body {
 
 }
 .contenedor-derecha {
-  background-image: url("/assets/imagenes/bg-right.jpg");
-  background-repeat: repeat;
+  background-image: url("/assets/imagenes/bg-right-2.jpg"), url("/assets/imagenes/bg-right.jpg");
   padding: 1em;
   margin: 0px;
+  background-repeat: no-repeat repeat,repeat;
+  background-size: auto,50%;
+  background-position: left top;
+  font-family: Futura-Bold;
 }
 .texto-cambiante {
   color: white;
   margin-top: 1em;
   font-size: 16px;
-  font-family: Futura-Book, sans-serif;
 }
 .texto-cambiante:hover {
   color: black;
@@ -147,6 +158,7 @@ body {
   line-height: 22px;
   margin-top: 1em;
   margin-right: 1em;
+  text-align: center;
 }
 .costo {
   background: white;
@@ -168,3 +180,35 @@ body {
   text-align: center;
   text-transform: uppercase;
 }
+.row {
+  padding-left: 1em;
+}
+
+@media screen and (min-width: 280px) {
+  .contenedor-producto {
+    max-width: 220px;
+  }
+}
+
+@media screen and (max-width: 960px) {
+  .visible{
+    visibility: hidden !important;
+  }
+  .arriba{
+    height: 60px;
+  }
+  .item-menu-diferente-izquierda {
+    padding-left: 25%;
+  }
+}
+
+@font-face {
+  font-family: 'StencilGothic';
+  src: url("/assets/fonts/stencil-gothic/StencilGothic.ttf");
+}
+
+@font-face {
+  font-family: 'Futura-Bold';
+  src: url("/assets/fonts/Futura-Bold/Futura-Bold.otf");
+}
+
