--- a/02-ionic/tinderpoli/src/app/tab1/tab1.page.html
+++ b/02-ionic/tinderpoli/src/app/tab1/tab1.page.html
@@ -4,9 +4,31 @@
       Tab One
     </ion-title>
   </ion-toolbar>
+  <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button></ion-back-button>
+    </ion-buttons>
+    <ion-title>Back Button</ion-title>
+  </ion-toolbar>
+  <ion-toolbar>
+    <ion-buttons slot="secondary">
+      <ion-button fill="outline">
+        <ion-icon slot="start" name="star"></ion-icon>
+        Star
+      </ion-button>
+    </ion-buttons>
+    <ion-title>Outline Buttons</ion-title>
+    <ion-buttons slot="primary">
+      <ion-button color="danger" fill="outline">
+        Edit
+        <ion-icon slot="end" name="create"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+  </ion-toolbar>
 </ion-header>
 
 <ion-content>
+   <!--
     <ion-card class="welcome-card">
       <ion-img src="/assets/shapes.svg"></ion-img>
       <ion-card-header>
@@ -38,4 +60,81 @@
         <ion-label>Theme Your App</ion-label>
       </ion-item>
     </ion-list>
+    -->
+  <ion-grid>
+    <ion-row>
+      <ion-col>
+        Texto 1
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col>
+        Texto 1
+      </ion-col>
+      <ion-col>
+        Texto 2
+      </ion-col>
+      <ion-col>
+        Texto 2
+      </ion-col>
+      <ion-col>
+        Texto 2
+      </ion-col>
+      <ion-col>
+        Texto 2
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col size="5" size-md>
+        Texto 1
+      </ion-col>
+      <ion-col size="5" size-md>
+        Texto 2
+      </ion-col>
+      <ion-col size="2" size-md>
+        Texto 3
+      </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col>
+        <ion-list>
+          <ion-list-header>
+            <ion-label>
+              Esta es una lista
+            </ion-label>
+          </ion-list-header>
+          <ion-item>
+            <ion-label>
+              Mama!!
+            </ion-label>
+          </ion-item>
+          <ion-item>
+            <ion-label>
+              Papa!!
+            </ion-label>
+          </ion-item>
+          <ion-item-sliding>
+            <ion-item>
+              <ion-label>Item</ion-label>
+            </ion-item>
+            <ion-item-options side="end">
+              <ion-item-option (click)="unread(item)">Unread</ion-item-option>
+            </ion-item-options>
+            <ion-item-options side="start">
+              <ion-item-option (click)="visto(item)">Visto </ion-item-option>
+            </ion-item-options>
+          </ion-item-sliding>
+        </ion-list>
+      </ion-col>
+    </ion-row>
+
+
+  </ion-grid>
 </ion-content>
+
+<ion-footer>
+  <ion-toolbar>
+    <ion-title>Footer</ion-title>
+  </ion-toolbar>
+</ion-footer>
