--- a/03-rutas/rutas/src/app/rutas/ruta-home/ruta-home.component.html
+++ b/03-rutas/rutas/src/app/rutas/ruta-home/ruta-home.component.html
@@ -1,3 +1,7 @@
-<p>
-  ruta-home works!
-</p>
+<button (click)="login()">
+  Login
+</button>
+<br>
+<button (click)="logout()">
+  Logout
+</button>
