--- a/02-ionic/go-uio/go-uio/src/app/tab1/tab1.page.html
+++ b/02-ionic/go-uio/go-uio/src/app/tab1/tab1.page.html
@@ -41,7 +41,7 @@
       </ion-item>
     </ion-list>
     -->
-  <ion-list>
+  <ion-list lines="none">
     <ion-item *ngFor="let equipo of listaEquipos ">
       <ion-card>
         <!--
