--- a/02-ionic/go-uio/go-uio/src/app/tab2/tab2.page.scss
+++ b/02-ionic/go-uio/go-uio/src/app/tab2/tab2.page.scss
@@ -1,1 +1,14 @@
-
+ion-card {
+  width: 100%;
+}
+ion-item {
+  width: 100%;
+  background-color: rgba(255,0,0,.5);
+}
+.competition{
+  border-bottom: #7abaff 2px solid;
+  background: lightcyan;
+}
+col {
+  background-color: rgba(255,0,0,.5);
+}
