--- a/04-formularios/formularios/src/styles.css
+++ b/04-formularios/formularios/src/styles.css
@@ -1,1 +1,19 @@
 /* You can add global styles to this file, and also import other style files */
+input.ng-valid.ng-dirty {
+    border: green solid 5px;
+}
+
+label + input.ng-valid.ng-dirty {
+    color: green;
+}
+
+input.ng-invalid.ng-dirty {
+    border: red solid 5px;
+}
+
+input.ng-untouched.ng-invalid.ng-pristine {
+    border: orange solid 5 px;
+}
+label + input.ng-invalid.ng-untouched {
+    color: orange solid 5 px;
+}
