--- a/examen-1er-bim/examen1/src/app/rutas/ruta-gestionar/gestionar-autos/gestionar-autos/gestionar-autos.component.html
+++ b/examen-1er-bim/examen1/src/app/rutas/ruta-gestionar/gestionar-autos/gestionar-autos/gestionar-autos.component.html
@@ -38,7 +38,7 @@
     <div class="col-md border border-primary"> {{auto.anio}} </div>
     <div class="col-md border border-primary"> {{auto.precio}} </div>
     <div class="col-md border border-primary">
-      <button (click)="elimarAuto(auto)" > eliminar </button>
+      <button (click)="elimarAuto(auto)" class="btn btn-outline-danger"  > eliminar </button>
     </div>
 
   </div>
@@ -47,4 +47,4 @@
 </div>
 
 
-<button (click)="volver()" >Volver...</button>
+<button (click)="volver()" class="btn btn-outline-info"  >Volver...</button>
