--- a/examen-1er-bim/examen1/src/app/rutas/ruta-home/ruta-home.component.html
+++ b/examen-1er-bim/examen1/src/app/rutas/ruta-home/ruta-home.component.html
@@ -13,13 +13,8 @@
          minlength="3"
          maxlength="10"
          name="nombre" type="text" [(ngModel)]="alex"  #vtNombre = "ngModel"  >
+  <hr>
 
-
-
-  <pre> {{vtNombre.errors | json  }} </pre>
-
-
-
-  <button type="submit"> Entrar </button>
+  <button type="submit" class="btn btn-outline-info" > ENTRAR </button>
 
 </form>
