--- a/examen-1er-bim/examen1/src/app/rutas/ruta-gestionar/gestionar-conductor/crear-conductor/crear-conductor.component.html
+++ b/examen-1er-bim/examen1/src/app/rutas/ruta-gestionar/gestionar-conductor/crear-conductor/crear-conductor.component.html
@@ -74,10 +74,10 @@
 
   </div>
 
-  <button type="submit" > Agregar </button>
+  <button type="submit" class="btn btn-outline-success"  > Agregar </button>
 
 </form>
 <hr>
-<button (click)="volver()" >
+<button (click)="volver()" class="btn btn-outline-info"  >
   Volver...
 </button>
